--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.15.4",
     "gitignore": "^0.6.0",
+    "mongodb": "^2.2.31",
     "nodemon": "^1.11.0",
     "socket.io": "^2.0.3"
   },
