--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "gitignore": "^0.6.0",
